# wordscissors

./: pyproject.toml
wordscissors/: word_separation.py
